# Password-Manager

./: CMakeLists.txt  README.md  main.cpp
Encryption/: Encryption.cpp  Encryption.h
PasswordManager/: PasswordManager.cpp  PasswordManager.h
additionalMethods/: aditionalMethods.cpp  aditionalMethods.h
categories/: categories.txt
dataOperations/: dataOperations.cpp  dataOperations.h
operationsWithPassword/: passwordOperations.cpp  passwordOperations.h
password/: Password.hpp
runProgramme/: runProgramme.cpp  runProgramme.h
txtFiles/: IT.txt
